syntax = "proto3";

package naraft;

option go_package = "naraft/proto";

service RaftService {
  rpc AppendEntries(AppendEntryRequest) returns (AppendEntryResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntryRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 previous_log_index = 3;
  uint64 previous_log_term = 4;
  uint64 leader_commit  = 5;
  repeated LogEntry entries = 6;
}


message AppendEntryResponse {
  uint64 term = 1;
  bool success = 2;
}


message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidate_peer_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}


message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes command = 3;
}







